<resources>
    <string name="app_name">HeartFlowApp</string>
    <!-- General -->
    <string name="loading">Loading…</string>
    <string name="action_save">Save</string>
    <string name="action_create">Create</string>
    <string name="action_register">Register</string>
    <string name="is_active">Active</string>
    <string name="is_completed">Completed</string>

    <!-- Authentication description -->
    <string name="prompt_email">Enter email</string>
    <string name="prompt_password">Enter password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="select_role">Select role</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_cancel">Cancel</string>
    <string name="my_profile">My Profile</string>
    <string name="action_logout">Log out</string>


    <!-- Profile description -->
    <string name="person_details">Personal Details</string>
    <string name="prompt_fullname">Enter full name</string>
    <string name="label_fullname">Full name</string>
    <string name="label_blood_type">Blood type</string>
    <string name="a_plus">A+</string>
    <string name="a_minus">A-</string>
    <string name="b_plus">B+</string>
    <string name="b_minus">B-</string>
    <string name="o_plus">O+</string>
    <string name="o_minus">O-</string>
    <string name="ab_plus">AB+</string>
    <string name="ab_minus">AB-</string>
    <string name="label_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="label_dob">D.O.B</string>
    <string name="label_datepicker">Choose</string>
    <string name="prompt_dob">D.O.B</string>
    <string name="action_close">Close</string>
    <string name="label_phone">Phone number</string>
    <string name="prompt_phone">Enter phone number</string>

    <!-- Nav bar label -->
    <string name="label_site">Site</string>
    <string name="label_map">Map</string>
    <string name="label_profile">Profile</string>
    <string name="label_home">Home</string>

    <!-- Manager view label -->
    <string name="site_info">Site Information</string>
    <string name="label_site_name">Site name</string>
    <string name="prompt_site_name">Enter site name</string>
    <string name="label_site_address">Site address</string>
    <string name="address_choose">Open Map</string>
    <string name="label_user_position">My Position</string>
    <string name="no_site">No site information</string>
    <string name="to_create">+ Create site</string>
    <string name="event_info">Event Information</string>
    <string name="label_event_name">Event name</string>
    <string name="prompt_event_name">Enter event name</string>
    <string name="label_event_date">Event date</string>
    <string name="action_volunteer">Volunteer</string>
    <string name="action_end_drive">End drive</string>
    <string name="label_required_types">Required blood types</string>
    <string name="blood_collection">Blood type collection</string>
    <string name="label_charts">Total Blood Collected By Drive</string>
    <string name="label_total_drives">Total Drives</string>
    <string name="label_total_donors">Total Donors</string>
    <string name="label_dashboard">My Dashboard</string>

    <!-- Donor view label -->
    <string name="label_donation_events">Donation Events</string>
    <string name="label_volunteer_events">Volunteer Events</string>
    <string name="label_past_events">My Past Events</string>

    <!-- Admin view label -->
    <string name="label_total_managers">Total Managers</string>
    <string name="label_successful_events">Complete Drives</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>