<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.fragments.auth.ManagerProfileSettingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/full_name"
        android:text="@string/label_fullname"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_selector"
        android:hint="@string/prompt_fullname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/gender_selector"
        android:text="@string/label_gender"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/gender_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:rowCount="1">

        <TextView
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/box_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/male"
            android:textColor="@color/light_red" />

        <TextView
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/box_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/female"
            android:textColor="@color/light_red" />
    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_phone"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ePhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_selector"
        android:hint="@string/prompt_phone"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/save_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/primary_red"
            android:paddingHorizontal="50dp"
            android:text="@string/action_save" />
    </RelativeLayout>


</LinearLayout>