<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.manager.SiteFormFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/details_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/site_info"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/label_site_name"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eSiteName"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/input_selector"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_site_name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_site_address"
                android:textStyle="bold" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/address_display"
                android:padding="5dp"
                android:background="@drawable/input_selector"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/show_map"
                android:textSize="18sp"
                android:padding="12dp"
                android:focusable="true"
                android:text="@string/address_choose"
                android:clickable="true"
                />
            <androidx.fragment.app.FragmentContainerView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:id="@+id/map_container"
                android:layout_height="400dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="300dp"
                android:id="@+id/create_site"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/action_create"/>
        </LinearLayout>
    </RelativeLayout>


</ScrollView>