<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_close"
        android:src="@drawable/icon_close"
        android:padding="15dp"
        android:backgroundTint="@android:color/transparent" />

    <TextView
        android:id="@+id/site_name"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Children's Hospital"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/site_address"
        style="@style/MaterialAlertDialog.Material3.Body.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Addressjhjfhgfjhgfjghfjghjhfjghfjhfjh" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_event_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/site_date"
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="25-12-2024" />
    </LinearLayout>

    <TextView
        style="@style/MaterialAlertDialog.Material3.Body.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_required_types"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/blood_types_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_red"
            android:text="@string/action_register" />

        <Button
            android:id="@+id/volunteer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/action_volunteer" />

    </LinearLayout>
</LinearLayout>
